added database crud

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,4 +5,6 @@ target 'calcoun' do
   pod 'Firebase/Core', :modular_headers => true
   pod 'Firebase/Auth'
   pod 'Firebase/Firestore'
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
 end
