--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.7.2",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-elements": "^0.19.1",
     "react-native-firebase": "^5.1.1",
     "react-native-gesture-handler": "^1.0.12",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
