--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,4 +7,8 @@ target 'calcoun' do
   pod 'Firebase/Firestore'
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-fetch-blob', :path => '../node_modules/react-native-fetch-blob'
+
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
 end
