--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-elements": "^0.19.1",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-firebase": "^5.1.1",
     "react-native-gesture-handler": "^1.0.12",
+    "react-native-image-picker": "^0.28.0",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9"
   },
